perf(BookService): improve BookService